force-app/main/default/objects/Delivery_Address__c/Delivery_Address__c.object-meta.xml
<CustomObject>
    <description>Related Addresses to a Subscriber Household or Business and a Delivery Schedule of a Subscription.</description>
    <label>Delivery Address</label>
    <nameField>
        <displayFormat>DA-{0}</displayFormat>
        <label>Delivery Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>