force-app/main/default/objects/Delivery_Address__c/fields/Address_City__c.field-meta.xml
<CustomField>
        <fullName>Address_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>