force-app/main/default/objects/Delivery_Address__c/fields/Address_Full_Street__c.field-meta.xml
<CustomField>
        <fullName>Address_Full_Street__c</fullName>
        <formula>IF(NOT(ISBLANK(Address_House__c)), Address_House__c+ ' ', '') +
IF(NOT(ISBLANK(Pre_Direction__c)), Pre_Direction__c + ' ', '') +  
IF(NOT(ISBLANK(Address_Street__c)), Address_Street__c+ ' ', '') +
IF(NOT(ISBLANK(Address_Suffix__c)), Address_Suffix__c+ ' ', '') +
IF(NOT(ISBLANK(Post_Direction__c)), Post_Direction__c + ' ', '')</formula>
        <label>Full Street</label>
        <type>Text</type>
    </CustomField>