force-app/main/default/objects/Delivery_Address__c/fields/Address_House__c.field-meta.xml
<CustomField>
        <fullName>Address_House__c</fullName>
        <label>House Number</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>