force-app/main/default/objects/Delivery_Address__c/fields/Address_Postal_Route__c.field-meta.xml
<CustomField>
        <fullName>Address_Postal_Route__c</fullName>
        <label>Postal Route</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>