force-app/main/default/objects/Delivery_Address__c/fields/Address_Suffix__c.field-meta.xml
<CustomField>
        <fullName>Address_Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>