force-app/main/default/objects/Delivery_Address__c/fields/Always_TMC__c.field-meta.xml
<CustomField>
        <fullName>Always_TMC__c</fullName>
        <label>Always TMC</label>
        <type>Date</type>
    </CustomField>