force-app/main/default/objects/Delivery_Address__c/fields/City_Code__c.field-meta.xml
<CustomField>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>