force-app/main/default/objects/Delivery_Address__c/fields/Clean_Suite_Personator_Result__c.field-meta.xml
<CustomField>
        <fullName>Clean_Suite_Personator_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clean Suite Personator Result</label>
        <referenceTo>MDPERSONATOR__MD_personatorResult__c</referenceTo>
        <relationshipLabel>Delivery Addresses</relationshipLabel>
        <relationshipName>Delivery_Addresses</relationshipName>
        <type>Lookup</type>
    </CustomField>