force-app/main/default/objects/Delivery_Address__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <defaultValue>'US'</defaultValue>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>