force-app/main/default/objects/Delivery_Address__c/fields/DPV__c.field-meta.xml
<CustomField>
        <fullName>DPV__c</fullName>
        <label>DPV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>