force-app/main/default/objects/Delivery_Address__c/fields/DSI_Error__c.field-meta.xml
<CustomField>
        <fullName>DSI_Error__c</fullName>
        <label>DSI Error</label>
        <type>TextArea</type>
    </CustomField>