force-app/main/default/objects/Delivery_Address__c/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
        <fullName>Dwelling_Type__c</fullName>
        <label>Dwelling Type</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>