force-app/main/default/objects/Delivery_Address__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </CustomField>