force-app/main/default/objects/Delivery_Address__c/fields/Geo_Side__c.field-meta.xml
<CustomField>
        <fullName>Geo_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Side</label>
        <type>Checkbox</type>
    </CustomField>