force-app/main/default/objects/Delivery_Address__c/fields/Marketing_Zone__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Zone__c</fullName>
        <label>Marketing Zone</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>