force-app/main/default/objects/Delivery_Address__c/fields/Melissa_Response__c.field-meta.xml
<CustomField>
        <fullName>Melissa_Response__c</fullName>
        <description>Response code returned</description>
        <label>Melissa Response</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>