force-app/main/default/objects/Delivery_Address__c/fields/Never_TMC__c.field-meta.xml
<CustomField>
        <fullName>Never_TMC__c</fullName>
        <label>Never TMC</label>
        <type>Date</type>
    </CustomField>