force-app/main/default/objects/Delivery_Address__c/fields/Post_Direction__c.field-meta.xml
<CustomField>
        <fullName>Post_Direction__c</fullName>
        <label>Post Direction</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>