force-app/main/default/objects/Delivery_Address__c/fields/Postal_Line_of_Travel__c.field-meta.xml
<CustomField>
        <fullName>Postal_Line_of_Travel__c</fullName>
        <label>Postal Line-of-Travel</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>