force-app/main/default/objects/Delivery_Address__c/fields/Pre_Direction__c.field-meta.xml
<CustomField>
        <fullName>Pre_Direction__c</fullName>
        <label>Pre Direction</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>