force-app/main/default/objects/Delivery_Address__c/fields/Route__c.field-meta.xml
<CustomField>
        <fullName>Route__c</fullName>
        <label>Route #</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>