force-app/main/default/objects/Delivery_Address__c/fields/Route_Number__c.field-meta.xml
<CustomField>
        <fullName>Route_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route #</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Delivery Addresses</relationshipLabel>
        <relationshipName>Delivery_Addresses</relationshipName>
        <type>Lookup</type>
    </CustomField>