force-app/main/default/objects/Delivery_Address__c/fields/Scrubbed__c.field-meta.xml
<CustomField>
        <fullName>Scrubbed__c</fullName>
        <label>Scrubbed</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>