force-app/main/default/objects/Delivery_Address__c/fields/Seasonally_Occupied__c.field-meta.xml
<CustomField>
        <fullName>Seasonally_Occupied__c</fullName>
        <label>Seasonally Occupied</label>
        <type>Date</type>
    </CustomField>