force-app/main/default/objects/Delivery_Address__c/fields/SLZ_Exception__c.field-meta.xml
<CustomField>
        <fullName>SLZ_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLZ Exception</label>
        <type>Checkbox</type>
    </CustomField>