force-app/main/default/objects/Delivery_Address__c/fields/Subscriber__c.field-meta.xml
<CustomField>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delivery Addresses</relationshipLabel>
        <relationshipName>Delivery_Addresses</relationshipName>
        <type>Lookup</type>
    </CustomField>