force-app/main/default/objects/Delivery_Address__c/fields/Town__c.field-meta.xml
<CustomField>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>