force-app/main/default/objects/Delivery_Address__c/fields/Unit__c.field-meta.xml
<CustomField>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>