force-app/main/default/objects/Delivery_Address__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>Multi-Family Home</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>