force-app/main/default/objects/Delivery_Address__c/fields/Vacant_Date__c.field-meta.xml
<CustomField>
        <fullName>Vacant_Date__c</fullName>
        <label>Vacant Date</label>
        <type>Date</type>
    </CustomField>