force-app/main/default/objects/Delivery_Address__c/fields/Walk_Seq__c.field-meta.xml
<CustomField>
        <fullName>Walk_Seq__c</fullName>
        <label>Walk Seq</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>