force-app/main/default/objects/Delivery_Address__c/fields/Zone__c.field-meta.xml
<CustomField>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>