force-app/main/default/objects/Delivery_Address__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_House__c</columns>
        <columns>Pre_Direction__c</columns>
        <columns>Address_Street__c</columns>
        <columns>Post_Direction__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>Unit__c</columns>
        <columns>Address_Full_Street__c</columns>
        <columns>Route_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>